--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "url": "git://github.com/"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "mailparser": "^0.6.0",
     "typescript": "^1.8.10"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "gulp": "^3.9.1",
+    "gulp-bundle-assets": "^2.27.1",
     "gulp-mocha": "^2.2.0",
+    "gulp-rimraf": "^0.2.0",
     "gulp-typescript": "^2.13.6",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
