--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "mailparser": "^0.6.0",
+    "request": "^2.73.0",
     "typescript": "^1.8.10"
   },
   "devDependencies": {
@@ -27,6 +28,8 @@
     "karma-mocha": "^1.1.1",
     "karma-requirejs": "^1.0.0",
     "mocha": "^2.5.3",
+    "mock-fs": "^3.11.0",
+    "nock": "^8.0.0",
     "requirejs": "^2.2.0"
   },
   "scripts": {
