--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "git://github.com/"
   },
   "dependencies": {
+    "aws-sdk": "^2.4.7",
     "bluebird": "^3.4.1",
     "mailparser": "^0.6.0",
     "request": "^2.73.0",
