--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.4.1",
     "mailparser": "^0.6.0",
     "request": "^2.73.0",
+    "serverless-optimizer-plugin": "^2.5.1",
     "typescript": "^1.8.10"
   },
   "devDependencies": {
