--- a/package.json
+++ b/package.json
@@ -10,33 +10,6 @@
     "url": "git://github.com/"
   },
   "dependencies": {
-    "aws-sdk": "^2.4.7",
-    "bluebird": "^3.4.1",
-    "mailparser": "^0.6.0",
-    "request": "^2.73.0",
-    "serverless-optimizer-plugin": "^2.5.1",
-    "typescript": "^1.8.10"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "gulp": "^3.9.1",
-    "gulp-bundle-assets": "^2.27.1",
-    "gulp-mocha": "^2.2.0",
-    "gulp-rimraf": "^0.2.0",
-    "gulp-typescript": "^2.13.6",
-    "karma": "^1.1.0",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-mocha": "^1.1.1",
-    "karma-requirejs": "^1.0.0",
-    "mocha": "^2.5.3",
-    "mock-fs": "^3.11.0",
-    "nock": "^8.0.0",
-    "requirejs": "^2.2.0"
-  },
-  "scripts": {
-    "prepublish": "tsc",
-    "pretest": "tsc",
-    "test": "mocha ./lib/test"
+    "serverless-optimizer-plugin": "^2.5.1"
   }
 }
